[gd_scene load_steps=3 format=3 uid="uid://b72fr6t0ed4s0"]

[ext_resource type="Script" uid="uid://bqxah4gdmfyu6" path="res://addons/escoria-wizard/RoomCreator.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://clm4n1qg8fidx" path="res://addons/escoria-wizard/graphics/background_preview.png" id="2"]

[node name="CenterContainer" type="CenterContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.235294, 0.341176, 0.290196, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Room Creator"
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(460, 200)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 4

[node name="RoomNameLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Room name:"

[node name="RoomName" type="LineEdit" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="Spacer3" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Spacer6" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="GlobalIDLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Global ID:"

[node name="GlobalID" type="LineEdit" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="Spacer4" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Spacer7" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="PlayerSceneLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Player scene:"

[node name="PlayerScene" type="LineEdit" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Scene will be left blank."
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="UseEmptyPlayerButton" type="CheckButton" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Use empty player scene"

[node name="SelectPlayerScene" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
visible = false
layout_mode = 2
text = "Select Player Scene"

[node name="SelectPlayerSceneSpacer" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="ESCScriptLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Room ESC script:"

[node name="ESCScript" type="LineEdit" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
tooltip_text = "In the room's scripts folder
an empty file will be created
with this name."
text = "Room will not have a script configured."
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="UseEmptyRoomScript" type="CheckButton" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "No script"

[node name="UseEmptyRoomSpacer" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="BackgroundImageLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Background image:"

[node name="BackgroundImage" type="LineEdit" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Image will be left blank."
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="UseEmptyBackground" type="CheckButton" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Use empty background"

[node name="SelectBackground" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
visible = false
layout_mode = 2
text = "Select Background"

[node name="SelectBackgroundSpacer" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="RoomFolderLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Room folder parent:"

[node name="RoomFolder" type="LineEdit" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
tooltip_text = "A folder (<Global ID>) for your room will be created inside this parent folder."
text = "res://game/rooms"
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="ChangeRoomFolderButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Change Room Folder"

[node name="Spacer8" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="PreviewSection" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 400)
layout_mode = 2

[node name="PreviewFrame" type="ColorRect" parent="MarginContainer/MarginContainer/VBoxContainer/PreviewSection"]
custom_minimum_size = Vector2(1000, 400)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/PreviewSection"]
layout_mode = 2

[node name="RoomBackground" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/PreviewSection/CenterContainer"]
custom_minimum_size = Vector2(990, 390)
layout_mode = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 7

[node name="Control" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/PreviewSection"]
layout_mode = 2

[node name="BackgroundPreview" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/PreviewSection/Control"]
layout_mode = 0
offset_right = 1000.0
offset_bottom = 400.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(800, 80)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2/CenterContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
theme_override_constants/h_separation = 40
columns = 3

[node name="CreateButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
layout_mode = 2
text = "Create Room"

[node name="ClearButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
layout_mode = 2
text = "Clear"

[node name="MainMenuButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer"]
layout_mode = 2
text = "Main Menu"

[node name="InformationWindows" type="Control" parent="."]
layout_mode = 2

[node name="PlayerSceneFileDialog" type="FileDialog" parent="InformationWindows"]
filters = PackedStringArray("*.tscn, *.scn ; Scene Files")

[node name="ESCScriptFileDialog" type="FileDialog" parent="InformationWindows"]
filters = PackedStringArray("*.esc; Escoria script files")

[node name="BackgroundImageFileDialog" type="FileDialog" parent="InformationWindows"]
filters = PackedStringArray("*.png, *.jpg, *.jpeg ; Supported Images")

[node name="ClearConfirmationDialog" type="ConfirmationDialog" parent="InformationWindows"]
dialog_text = "WARNING!

If you continue you will lose the current room setup."

[node name="MainMenuConfirmationDialog" type="ConfirmationDialog" parent="InformationWindows"]
dialog_text = "WARNING!

If you continue you will lose the current room setup."

[node name="GenericErrorDialog" type="AcceptDialog" parent="InformationWindows"]
dialog_text = "ERROR!

Please supply a name for the room."

[node name="CreateCompleteDialog" type="AcceptDialog" parent="InformationWindows"]
dialog_text = "The room has been created."

[node name="RoomFolderDialog" type="FileDialog" parent="InformationWindows"]
mode = 2

[connection signal="text_changed" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer/RoomName" to="." method="_on_RoomName_text_changed"]
[connection signal="text_changed" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer/GlobalID" to="." method="_on_GlobalID_text_changed"]
[connection signal="toggled" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer/UseEmptyPlayerButton" to="." method="_on_UseEmptyPlayerButton_toggled"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer/SelectPlayerScene" to="." method="_on_SelectPlayerScene_pressed"]
[connection signal="toggled" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer/UseEmptyRoomScript" to="." method="_on_UseEmptyRoomScript_toggled"]
[connection signal="toggled" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer/UseEmptyBackground" to="." method="_on_UseEmptyBackground_toggled"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer/SelectBackground" to="." method="_on_SelectBackground_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/GridContainer/ChangeRoomFolderButton" to="." method="_on_ChangeRoomFolderButton_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/GridContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="file_selected" from="InformationWindows/PlayerSceneFileDialog" to="." method="_on_PlayerSceneFileDialog_file_selected"]
[connection signal="file_selected" from="InformationWindows/ESCScriptFileDialog" to="." method="_on_ESCScriptFileDialog_file_selected"]
[connection signal="file_selected" from="InformationWindows/BackgroundImageFileDialog" to="." method="_on_BackgroundImageFileDialog_file_selected"]
[connection signal="confirmed" from="InformationWindows/ClearConfirmationDialog" to="." method="_on_ClearConfirmationDialog_confirmed"]
[connection signal="confirmed" from="InformationWindows/MainMenuConfirmationDialog" to="." method="_on_MainMenuConfirmationDialog_confirmed"]
[connection signal="dir_selected" from="InformationWindows/RoomFolderDialog" to="." method="_on_RoomFolderDialog_dir_selected"]
